# EMIC-ESP32

./: README.md
.claude/: settings.local.json
Claude_Code/: tutorial.html
Manual_Desarrollo_EMIC_V2/: ANALISIS_DIFERENCIAS_PORTADA_VS_ARCHIVOS.md
Manual_Desarrollo_EMIC_V2/Seccion_1_Introduccion/: 00_Portada.md  01_Introduccion.md  02_Arquitectura.md  03_Glosario.md  04_Ventajas.md  04_Ventajas_EMIC.md
Manual_Desarrollo_EMIC_V2/Seccion_2_Estructura_SDK/: 05_Vision_General_SDK.md  06_Carpeta_Modules.md  07_Carpeta_API.md  08_Carpeta_Drivers.md  09_Carpeta_HAL.md  10_Carpeta_Hard.md  11_Carpeta_Main.md  12_Carpeta_PCB.md  13_Carpeta_Templates.md  14_Carpeta_System.md  15_Carpeta_Util.md
Manual_Desarrollo_EMIC_V2/Seccion_3_EMIC_Codify/: 16_Fundamentos_Codify_Desarrollo.md  17_Comandos_Gestion_Archivos.md  18_Sistema_Macros_Sustitucion.md  19_Control_Flujo_Condicionales.md  20_Etiquetado_Recursos_Tags.md
Manual_Desarrollo_EMIC_V2/Seccion_4_Desarrollo/: 21_Desarrollo_API_Paso_a_Paso.md  (+5 more)
_hard/ESP32/: CMakeLists.txt  esp32_config.h
_hard/ESP32/ADC/: adc.emic
_hard/ESP32/ADC/inc/: adc.h
_hard/ESP32/ADC/src/: adc.c
_hard/ESP32/Bluetooth/: bt.emic
_hard/ESP32/Bluetooth/inc/: bt.h
_hard/ESP32/Bluetooth/src/: ble.c  bt_classic.c
_hard/ESP32/GPIO/: gpio.emic
_hard/ESP32/GPIO/inc/: gpio.h
_hard/ESP32/GPIO/src/: gpio.c
_hard/ESP32/I2C/: I2C.emic
_hard/ESP32/I2C/inc/: I2C.h
_hard/ESP32/I2C/src/: I2C.c
_hard/ESP32/PWM/: pwm.emic
_hard/ESP32/PWM/inc/: pwm.h
_hard/ESP32/PWM/src/: pwm.c
_hard/ESP32/SPI/: spi.emic
_hard/ESP32/SPI/Master/inc/: spi.h
_hard/ESP32/SPI/Master/src/: spi.c
_hard/ESP32/SPI/Slave/inc/: spi.h
_hard/ESP32/SPI/Slave/src/: spi.c
_hard/ESP32/System/: system.emic
_hard/ESP32/System/inc/: system.h
_hard/ESP32/System/src/: system.c
_hard/ESP32/Timer/: timer.emic
_hard/ESP32/Timer/inc/: timer.h
_hard/ESP32/Timer/src/: timer.c
_hard/ESP32/UART/: UARTX.emic
_hard/ESP32/UART/inc/: UARTX.h
_hard/ESP32/UART/src/: UARTX.c
_hard/ESP32/WiFi/: wifi.emic
_hard/ESP32/WiFi/inc/: wifi.h
_hard/ESP32/WiFi/src/: wifi.c
_hard/ESP32/pins/: setPinGPIO0.h  setPinGPIO1.h  setPinGPIO10.h  setPinGPIO11.h  setPinGPIO12.h  setPinGPIO13.h  setPinGPIO14.h  setPinGPIO15.h  setPinGPIO16.h  setPinGPIO17.h  setPinGPIO18.h  setPinGPIO19.h  setPinGPIO2.h  setPinGPIO20.h  setPinGPIO21.h  setPinGPIO22.h  setPinGPIO23.h  setPinGPIO24.h  setPinGPIO25.h  setPinGPIO26.h  setPinGPIO27.h  setPinGPIO28.h  setPinGPIO29.h  setPinGPIO3.h  setPinGPIO30.h  setPinGPIO31.h  setPinGPIO32.h  setPinGPIO33.h  setPinGPIO34.h  setPinGPIO35.h  setPinGPIO36.h  setPinGPIO37.h  setPinGPIO38.h  setPinGPIO39.h  setPinGPIO4.h  setPinGPIO5.h  setPinGPIO6.h  setPinGPIO7.h  setPinGPIO8.h  setPinGPIO9.h
_hard/ESP32C6/: CMakeLists.txt  esp32c6_config.h
_hard/ESP32C6/ADC/: adc.emic
_hard/ESP32C6/ADC/inc/: adc.h
_hard/ESP32C6/ADC/src/: adc.c
_hard/ESP32C6/GPIO/: gpio.emic
_hard/ESP32C6/I2C/: I2C.emic
_hard/ESP32C6/I2C/inc/: I2C.h
_hard/ESP32C6/I2C/src/: I2C.c
_hard/ESP32C6/PWM/: pwm.emic
_hard/ESP32C6/PWM/inc/: pwm.h
_hard/ESP32C6/PWM/src/: pwm.c
_hard/ESP32C6/SPI/: spi.emic
_hard/ESP32C6/SPI/Master/inc/: spi.h
_hard/ESP32C6/SPI/Master/src/: spi.c
_hard/ESP32C6/SPI/Slave/inc/: spi.h
_hard/ESP32C6/SPI/Slave/src/: spi.c
_hard/ESP32C6/System/: system.emic
_hard/ESP32C6/Timer/: timer.emic
_hard/ESP32C6/Timer/inc/: timer.h
_hard/ESP32C6/Timer/src/: timer.c
_hard/ESP32C6/UART/: UARTX.emic
_hard/ESP32C6/UART/inc/: UARTX.h
_hard/ESP32C6/UART/src/: UARTX.c
_hard/ESP32C6/WiFi/: wifi.emic
_hard/ESP32C6/WiFi/inc/: wifi.h
_hard/ESP32C6/WiFi/src/: wifi.c
_hard/ESP32C6/pins/: setPinGPIO0.h  setPinGPIO1.h  setPinGPIO10.h  setPinGPIO11.h  setPinGPIO12.h  setPinGPIO13.h  setPinGPIO14.h  setPinGPIO15.h  setPinGPIO16.h  setPinGPIO17.h  setPinGPIO18.h  setPinGPIO19.h  setPinGPIO2.h  setPinGPIO20.h  setPinGPIO21.h  setPinGPIO22.h  setPinGPIO23.h  setPinGPIO24.h  setPinGPIO25.h  setPinGPIO26.h  setPinGPIO27.h  setPinGPIO28.h  setPinGPIO29.h  setPinGPIO3.h  setPinGPIO30.h  setPinGPIO4.h  setPinGPIO5.h  setPinGPIO6.h  setPinGPIO7.h  setPinGPIO8.h  setPinGPIO9.h
_hard/ESP32S3/: CMakeLists.txt  esp32s3_config.h
_hard/ESP32S3/ADC/: adc.emic
_hard/ESP32S3/ADC/inc/: adc.h
_hard/ESP32S3/ADC/src/: adc.c
_hard/ESP32S3/Bluetooth/: bt.emic
_hard/ESP32S3/Bluetooth/inc/: bt.h
_hard/ESP32S3/Bluetooth/src/: ble.c
_hard/ESP32S3/GPIO/: gpio.emic
_hard/ESP32S3/I2C/: I2C.emic
_hard/ESP32S3/I2C/inc/: I2C.h
_hard/ESP32S3/I2C/src/: I2C.c
_hard/ESP32S3/PWM/: pwm.emic
_hard/ESP32S3/PWM/inc/: pwm.h
_hard/ESP32S3/PWM/src/: pwm.c
_hard/ESP32S3/SPI/: spi.emic
_hard/ESP32S3/SPI/Master/inc/: spi.h
_hard/ESP32S3/SPI/Master/src/: spi.c
_hard/ESP32S3/SPI/Slave/inc/: spi.h
_hard/ESP32S3/SPI/Slave/src/: spi.c
_hard/ESP32S3/System/: system.emic
_hard/ESP32S3/Timer/: timer.emic
_hard/ESP32S3/Timer/inc/: timer.h
_hard/ESP32S3/Timer/src/: timer.c
_hard/ESP32S3/Touch/: touch.emic
_hard/ESP32S3/Touch/inc/: touch.h
_hard/ESP32S3/Touch/src/: touch.c
_hard/ESP32S3/UART/: UARTX.emic
_hard/ESP32S3/UART/inc/: UARTX.h
_hard/ESP32S3/UART/src/: UARTX.c
_hard/ESP32S3/USB/: usb.emic
_hard/ESP32S3/USB/inc/: usb.h
_hard/ESP32S3/USB/src/: usb.c
_hard/ESP32S3/WiFi/: wifi.emic
_hard/ESP32S3/WiFi/inc/: wifi.h
_hard/ESP32S3/WiFi/src/: wifi.c
_hard/ESP32S3/pins/: setPinGPIO0.h  setPinGPIO1.h  setPinGPIO10.h  setPinGPIO11.h  setPinGPIO12.h  setPinGPIO13.h  setPinGPIO14.h  setPinGPIO15.h  setPinGPIO16.h  setPinGPIO17.h  setPinGPIO18.h  setPinGPIO19.h  setPinGPIO2.h  setPinGPIO20.h  setPinGPIO21.h  setPinGPIO3.h  setPinGPIO35.h  setPinGPIO36.h  setPinGPIO37.h  setPinGPIO38.h  setPinGPIO39.h  setPinGPIO4.h  setPinGPIO40.h  setPinGPIO41.h  setPinGPIO42.h  setPinGPIO43.h  setPinGPIO44.h  setPinGPIO45.h  setPinGPIO46.h  setPinGPIO47.h  setPinGPIO48.h  setPinGPIO5.h  setPinGPIO6.h  setPinGPIO7.h  setPinGPIO8.h  setPinGPIO9.h
_plans/: 01_Plan_SDK_ESP32_Setup.md
_templates/projects/esp-idf/main/: CMakeLists.txt  main.c.template
(+165 files in other folders)
